# goose

./: .gitignore  README.md
backend/: README.md  dependencies.py  goose.sh  main.py  model.py  models.py  pyproject.toml  ruff.toml  tui.py
backend/migrations/: env.py
backend/migrations/versions/: 236ebb8ee17c_stock_exchange_table.py  2f8a3db89970_new_stock_table.py  bed7d330ce0f_add_price_table.py
backend/utils/: common.py  data.py  data_update.py  dataclass.py  stock-list.yml  yfinance.py
