[project]
name = "goose-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic~=1.18.4",
    "fastapi[standard]~=0.136.1",
    "sqlmodel~=0.0.38",
    "yfinance~=1.3.0",
]

[dependency-groups]
dev = [
    "ruff~=0.15.12",
    "textual~=8.2.4",
]
